# mc

./: autogen.sh  configure.ac
misc/: Makefile.am
src/viewer/: ascii.c  search.c
